<resources>
    <string name="app_name">Calculator</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_0">0</string>
    <string name="button_equal">=</string>
    <string name="button_back">C</string>
    <string name="button_plus">+</string>
    <string name="button_min">-</string>
    <string name="button_div">/</string>
    <string name="button_multi">*</string>
    <string name="button_per">%</string>
    <string name="button_pow">^</string>
    <string name="hint_here">Write here!</string>
    <string name="button_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
